--- a/investigating_results.ipynb
+++ b/investigating_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -13,8 +13,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-29T12:07:33.409836200Z",
-     "start_time": "2023-12-29T12:07:33.382035Z"
+     "end_time": "2024-01-03T12:27:59.301295600Z",
+     "start_time": "2024-01-03T12:27:59.289293700Z"
     }
    },
    "id": "5cbb32f4cf73d9fe"
@@ -33,18 +33,19 @@
     "    'BPIC15_1.xes': 'BPIC 2015',\n",
     "    'Road_Traffic_Fine_Management_Process.xes.gz': 'RTFMP',\n",
     "    'Sepsis%20Cases%20-%20Event%20Log.xes.gz': 'Sepsis',\n",
-    "    'helpdesk.csv': 'Helpdesk'\n",
+    "    'helpdesk.csv': 'Helpdesk',\n",
+    "    'RTFMP_filtered.xes': 'RTFMP filtered',\n",
     "}"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-29T12:06:38.962437300Z",
-     "start_time": "2023-12-29T12:06:38.944796800Z"
+     "end_time": "2024-01-03T12:28:08.183104400Z",
+     "start_time": "2024-01-03T12:28:08.168106900Z"
     }
    },
    "id": "797b5d74d9b47013",
-   "execution_count": 12
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -449,14 +450,54 @@
    "id": "3e7bf6969dcfec1b"
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "cell_type": "markdown",
+   "source": [
+    "# Evaluation"
+   ],
    "metadata": {
     "collapsed": false
    },
-   "id": "c118bd765490858"
+   "id": "8b7de66087dda0b"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "    architecture        log         setting        freezed_layers     dls  \\\n0            rnn  BPIC 2017            base                  None  0.0691   \n1            rnn  BPIC 2017           RTFMP  ['0', '1', '2', '3']  0.0372   \n2            rnn  BPIC 2015            base                  None  0.0264   \n3            rnn  BPIC 2015        helpdesk  ['0', '1', '2', '3']  0.0226   \n4            rnn  BPIC 2015        helpdesk       ['0', '1', '2']  0.0323   \n..           ...        ...             ...                   ...     ...   \n130          rnn     Sepsis           RTFMP            ['0', '1']  0.2154   \n131          rnn     Sepsis           RTFMP                 ['0']  0.1153   \n132          rnn     Sepsis  RTFMP_filtered       ['0', '1', '2']  0.0734   \n133          rnn     Sepsis  RTFMP_filtered                 ['0']  0.0950   \n134          rnn     Sepsis            base                  None  0.2339   \n\n        mae  mae_denormalised  nb_worst_situs  \n0    0.7416          100.9505          223449  \n1    5.1177          696.6516          227572  \n2    2.6185         2549.0971            9359  \n3    2.4174         2353.3574            9307  \n4    1.8449         1795.9604            9226  \n..      ...               ...             ...  \n130  0.0794           33.1198               0  \n131  4.9646         2071.5384            1884  \n132  5.8221         2429.3135            2527  \n133  1.2984          541.7548            2647  \n134  0.0801           33.4105               0  \n\n[135 rows x 8 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>architecture</th>\n      <th>log</th>\n      <th>setting</th>\n      <th>freezed_layers</th>\n      <th>dls</th>\n      <th>mae</th>\n      <th>mae_denormalised</th>\n      <th>nb_worst_situs</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>rnn</td>\n      <td>BPIC 2017</td>\n      <td>base</td>\n      <td>None</td>\n      <td>0.0691</td>\n      <td>0.7416</td>\n      <td>100.9505</td>\n      <td>223449</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>rnn</td>\n      <td>BPIC 2017</td>\n      <td>RTFMP</td>\n      <td>['0', '1', '2', '3']</td>\n      <td>0.0372</td>\n      <td>5.1177</td>\n      <td>696.6516</td>\n      <td>227572</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>rnn</td>\n      <td>BPIC 2015</td>\n      <td>base</td>\n      <td>None</td>\n      <td>0.0264</td>\n      <td>2.6185</td>\n      <td>2549.0971</td>\n      <td>9359</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>rnn</td>\n      <td>BPIC 2015</td>\n      <td>helpdesk</td>\n      <td>['0', '1', '2', '3']</td>\n      <td>0.0226</td>\n      <td>2.4174</td>\n      <td>2353.3574</td>\n      <td>9307</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>rnn</td>\n      <td>BPIC 2015</td>\n      <td>helpdesk</td>\n      <td>['0', '1', '2']</td>\n      <td>0.0323</td>\n      <td>1.8449</td>\n      <td>1795.9604</td>\n      <td>9226</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>130</th>\n      <td>rnn</td>\n      <td>Sepsis</td>\n      <td>RTFMP</td>\n      <td>['0', '1']</td>\n      <td>0.2154</td>\n      <td>0.0794</td>\n      <td>33.1198</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>131</th>\n      <td>rnn</td>\n      <td>Sepsis</td>\n      <td>RTFMP</td>\n      <td>['0']</td>\n      <td>0.1153</td>\n      <td>4.9646</td>\n      <td>2071.5384</td>\n      <td>1884</td>\n    </tr>\n    <tr>\n      <th>132</th>\n      <td>rnn</td>\n      <td>Sepsis</td>\n      <td>RTFMP_filtered</td>\n      <td>['0', '1', '2']</td>\n      <td>0.0734</td>\n      <td>5.8221</td>\n      <td>2429.3135</td>\n      <td>2527</td>\n    </tr>\n    <tr>\n      <th>133</th>\n      <td>rnn</td>\n      <td>Sepsis</td>\n      <td>RTFMP_filtered</td>\n      <td>['0']</td>\n      <td>0.0950</td>\n      <td>1.2984</td>\n      <td>541.7548</td>\n      <td>2647</td>\n    </tr>\n    <tr>\n      <th>134</th>\n      <td>rnn</td>\n      <td>Sepsis</td>\n      <td>base</td>\n      <td>None</td>\n      <td>0.2339</td>\n      <td>0.0801</td>\n      <td>33.4105</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n<p>135 rows × 8 columns</p>\n</div>"
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_evaluation_results = pd.read_csv('all_evaluation_results.csv')\n",
+    "all_evaluation_results['log'] = all_evaluation_results['log'].map(mapping)\n",
+    "all_evaluation_results['freezed_layers'] = all_evaluation_results['freezed_layers'].fillna('None')\n",
+    "all_evaluation_results"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-03T12:28:44.415008Z",
+     "start_time": "2024-01-03T12:28:44.382496200Z"
+    }
+   },
+   "id": "99243e0c0b0af3b8",
+   "execution_count": 6
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "paper_results = pd.read_csv('paper_results.csv')"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "583bec2a7371e130"
   }
  ],
  "metadata": {
