Move results to results dir

--- a/collecting_results.ipynb
+++ b/collecting_results.ipynb
@@ -198,7 +198,7 @@
     "}\n",
     "paper_results_df['setting'] = paper_results_df['setting'].map(setting_mapping).fillna(paper_results_df['setting'])\n",
     "# Merge the two dataframes and keep the Regular setting\n",
-    "paper_results_df.to_csv('paper_results.csv', index=False)\n",
+    "paper_results_df.to_csv(f'{RESULTS_DIR}/paper_results.csv', index=False)\n",
     "paper_results_df"
    ],
    "metadata": {
@@ -530,7 +530,7 @@
    ],
    "source": [
     "training_results_df = pd.concat(training_result_dfs, ignore_index=True)\n",
-    "training_results_df.to_csv('all_training_results.csv')\n",
+    "training_results_df.to_csv(f'{RESULTS_DIR}/all_training_results.csv')\n",
     "training_results_df"
    ],
    "metadata": {
@@ -709,7 +709,7 @@
     }
    ],
    "source": [
-    "evaluation_results_df.to_csv('all_evaluation_results.csv', index=False)\n",
+    "evaluation_results_df.to_csv(f'{RESULTS_DIR}/all_evaluation_results.csv', index=False)\n",
     "evaluation_results_df"
    ],
    "metadata": {
