--- a/investigating_results.ipynb
+++ b/investigating_results.ipynb
@@ -58,6 +58,7 @@
     "freezed_layers_mapping = lambda x: re.sub(r\"[^\\d, ]\", \"\", x) if isinstance(x, str) else 'None'\n",
     "# Nicer architecture names\n",
     "architecture_mapping = {'rnn': 'LSTM', 'GPT': 'GPT'}\n",
+    "\n",
     "# Freezed layers order\n",
     "freezed_layers_order = [\n",
     "    '0, 1, 2, 3',\n",
@@ -123,7 +124,7 @@
     }
    ],
    "source": [
-    "all_training_results = pd.read_csv('all_training_results.csv')\n",
+    "all_training_results = pd.read_csv(f'{RESULTS_DIR}/all_training_results.csv')\n",
     "all_training_results['log'] = all_training_results['log'].map(mapping)\n",
     "all_training_results['architecture'] = all_training_results['architecture'].map(architecture_mapping)\n",
     "all_training_results['freezed_layers'] = all_training_results['freezed_layers'].map(freezed_layers_mapping)\n",
@@ -217,33 +218,6 @@
    },
    "id": "ddf54a29e92d4d9e",
    "execution_count": 101
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 106,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "Empty DataFrame\nColumns: [log, architecture, setting, freezed_layers, mean_elapsed_seconds, total_elapsed_seconds, number_of_epochs, final_validation_loss, final_validation_loss_activity, final_validation_loss_time, freezed_layers_count, fraction_of_total_base_training_time, fraction_of_mean_base_training_time]\nIndex: []",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>log</th>\n      <th>architecture</th>\n      <th>setting</th>\n      <th>freezed_layers</th>\n      <th>mean_elapsed_seconds</th>\n      <th>total_elapsed_seconds</th>\n      <th>number_of_epochs</th>\n      <th>final_validation_loss</th>\n      <th>final_validation_loss_activity</th>\n      <th>final_validation_loss_time</th>\n      <th>freezed_layers_count</th>\n      <th>fraction_of_total_base_training_time</th>\n      <th>fraction_of_mean_base_training_time</th>\n    </tr>\n  </thead>\n  <tbody>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 106,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Print duplicate rows based on log, architecture, setting and freezed layers\n",
-    "training_results_df[training_results_df.duplicated(subset=['log', 'architecture', 'setting', 'freezed_layers'], keep=False)]"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-01-04T15:21:04.918012700Z",
-     "start_time": "2024-01-04T15:21:04.682254300Z"
-    }
-   },
-   "id": "470936ebb54cf741"
   },
   {
    "cell_type": "markdown",
@@ -531,7 +505,7 @@
     }
    ],
    "source": [
-    "all_evaluation_results = pd.read_csv('all_evaluation_results.csv')\n",
+    "all_evaluation_results = pd.read_csv(f'{RESULTS_DIR}/all_evaluation_results.csv')\n",
     "all_evaluation_results['log'] = all_evaluation_results['log'].map(mapping)\n",
     "all_evaluation_results['architecture'] = all_evaluation_results['architecture'].map(architecture_mapping)\n",
     "all_evaluation_results['freezed_layers'] = all_evaluation_results['freezed_layers'].map(freezed_layers_mapping)\n",
@@ -591,7 +565,7 @@
     }
    ],
    "source": [
-    "paper_results = pd.read_csv('paper_results.csv')\n",
+    "paper_results = pd.read_csv(f'{RESULTS_DIR}/paper_results.csv')\n",
     "# Convert dls and mae to float and fill the - with NaN\n",
     "paper_results['dls'] = paper_results['dls'].replace('-', float('nan')).astype(float)\n",
     "paper_results['mae'] = paper_results['mae'].replace('-', float('nan')).astype(float)\n",
