Improve log stats

--- a/reports/log_stats.tex
+++ b/reports/log_stats.tex
@@ -3,25 +3,21 @@
 \label{tab:log_stats}
 
     \centering
-    \begin{NiceTabular}{lccccccccc}
+    \begin{NiceTabular}{lcccccccc}
     \CodeBefore
     \rowcolor{gray!50}{1}
     \rowcolors{2}{gray!25}{white}
     \Body
- & \textbf{file\_name} & \textbf{vocab\_size} & \textbf{num\_traces} & \textbf{num\_events} & \textbf{max\_trace\_length} & \textbf{min\_trace\_length} & \textbf{avg\_trace\_length} & \textbf{num\_events\_copy} & \textbf{amount\_of\_padding} & \textbf{relative\_padding} \\
-0 & BPI Challenge 2018.xes.gz & 42 & 43809 & 130244157 & 2973 & 24 & 57.39154055102833 & 2514266.0 & 127729891.0 & 0.980695748216943 \\
-1 & BPI%20Challenge%202017.xes.gz & 27 & 31509 & 5671620 & 180 & 10 & 38.15630454790695 & 1202267.0 & 4469353.0 & 0.7880205302894059 \\
-2 & BPIC15_1.xes & 399 & 1199 & 121099 & 101 & 2 & 43.55045871559633 & 52217.0 & 68882.0 & 0.5688073394495413 \\
-3 & BPI_Challenge_2012.xes.gz & 25 & 13087 & 2290225 & 175 & 3 & 20.035149384885763 & 262200.0 & 2028025.0 & 0.885513432086367 \\
-4 & BPI_Challenge_2013_closed_problems.xes.gz & 5 & 1487 & 52045 & 35 & 1 & 4.478816408876933 & 6660.0 & 45385.0 & 0.8720338168892304 \\
-5 & BPI_Challenge_2013_incidents.xes.gz & 5 & 7554 & 929142 & 123 & 1 & 8.675271379401641 & 65533.0 & 863609.0 & 0.9294693383788485 \\
-6 & BPI_Challenge_2013_open_problems.xes.gz & 4 & 819 & 18018 & 22 & 1 & 2.8705738705738706 & 2351.0 & 15667.0 & 0.8695193695193695 \\
-7 & BPI_Challenge_2019.xes & 43 & 251734 & 249216660 & 990 & 1 & 6.33971970413214 & 1595923.0 & 247620737.0 & 0.9935962427230989 \\
-8 & CoSeLoG WABO 3.xes.gz & 370 & 1087 & 134788 & 124 & 3 & 41.215271389144434 & 44801.0 & 89987.0 & 0.6676187791198029 \\
-9 & Hospital Billing - Event Log.xes.gz & 19 & 100000 & 21700000 & 217 & 1 & 4.51359 & 451359.0 & 21248641.0 & 0.9792000460829493 \\
-10 & Hospital_log.xes.gz & 625 & 1143 & 2073402 & 1814 & 1 & 131.48818897637796 & 150291.0 & 1923111.0 & 0.9275147800571235 \\
-11 & Road_Traffic_Fine_Management_Process.xes.gz & 12 & 150370 & 3007400 & 20 & 2 & 3.7339229899581032 & 561470.0 & 2445930.0 & 0.8133038505020949 \\
-12 & Sepsis%20Cases%20-%20Event%20Log.xes.gz & 17 & 1050 & 194250 & 185 & 3 & 14.48952380952381 & 15214.0 & 179036.0 & 0.9216782496782496 \\
-13 & helpdesk.csv & 10 & 3804 & 53256 & 14 & 1 & 3.60410094637224 & 13710.000000000002 & 39546.0 & 0.7425642181162686 \\
+ & \textbf{log} & \textbf{num traces} & \textbf{num events} & \textbf{num activities} & \textbf{longest trace} & \textbf{avg trace length} & \textbf{shortest trace length} & \textbf{amount of padding} & \textbf{relative padding} \\
+0 & BPI17 & 31509 & 1202267 & 26 & 180 & 38.15630454790695 & 10 & 4469353 & 0.7880205302894059 \\
+1 & BPI15 & 1199 & 52217 & 398 & 101 & 43.55045871559633 & 2 & 68882 & 0.5688073394495413 \\
+2 & BPI12 & 13087 & 262200 & 24 & 175 & 20.035149384885763 & 3 & 2028025 & 0.885513432086367 \\
+3 & BPI13 Closed & 1487 & 6660 & 4 & 35 & 4.478816408876933 & 1 & 45385 & 0.8720338168892304 \\
+4 & BPI13 Incidents & 7554 & 65533 & 4 & 123 & 8.675271379401641 & 1 & 863609 & 0.9294693383788485 \\
+5 & BPI13 Open & 819 & 2351 & 3 & 22 & 2.8705738705738706 & 1 & 15667 & 0.8695193695193695 \\
+6 & RTFMP filtered & 150270 & 560551 & 11 & 14 & 3.730292140813203 & 2 & 1543229 & 0.7335505613704855 \\
+7 & RTFMP & 150370 & 561470 & 11 & 20 & 3.7339229899581032 & 2 & 2445930 & 0.8133038505020949 \\
+8 & Sepsis & 1050 & 15214 & 16 & 185 & 14.48952380952381 & 3 & 179036 & 0.9216782496782496 \\
+9 & Helpdesk & 3804 & 13710 & 9 & 14 & 3.6041009463722395 & 1 & 39546 & 0.7425642181162686 \\
 \end{NiceTabular}
 \end{table}
